--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
  <!DOCTYPE html>
-<html lang="en">
+ <html lang="en">
  <head>
     <meta charset="UTF-8">
     <title>Design, Develop, Innovate Amejia</title>
  </head>
  <body>
     <h1>Antonio Mejia's Portfolio</h1>
-    <h4>Currently a web-developer, soon a full-stack engineer!</h4>
-   <img src="./assets/images/ME.jpeg" height="300"/>
+    <h4>Currently a web developer, soon a full-stack engineer!</h4>
+    <img src="./assets/images/ME.jpeg" height="300"/>
     <hr/>
     <h2>Projects:</h2>
     <ol>
@@ -18,4 +18,3 @@
     <a href="./public/contact.html">Contact me</a>
  </body>
  </html>
-
